# fowl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  other_languages.md  thoughts_and_ideas.md
examples/: kitchen_sink.fo
examples/basic/: hello.fo  kitchen_sink.fo
examples/simple/: fowl.jsonc
examples/simple/src/: kitchen_sink.fo  main.fo  utils.fo
fowl/: Cargo.toml
fowl/src/: cli.rs  main.rs
libs/analyzer/: Cargo.toml
libs/analyzer/src/: analyzer.rs  ast.rs  lib.rs
libs/ast/: Cargo.toml
libs/ast/src/: ast.rs
libs/bir/: Cargo.toml
libs/bir/src/: ast.rs  bir.rs  lib.rs
libs/codegen/: Cargo.toml
libs/codegen/src/: codegen.rs  lib.rs  runtime.c
libs/error/: Cargo.toml
libs/error/src/: error.rs  lib.rs
libs/fowl_jsonc/: Cargo.toml
libs/fowl_jsonc/src/: lib.rs
libs/lexer/: Cargo.toml  build.rs
libs/lexer/src/: lexer.rs  lexer_error.rs  lexing.re  lexing.rs  lib.rs  token.rs
libs/logging/: Cargo.toml
libs/logging/src/: logging.rs
libs/parser/: Cargo.toml
libs/parser/src/: ast.rs  lib.rs  new_parser.rs  parser.rs
libs/span/src/: span.rs
libs/typecheck/: Cargo.toml
libs/typecheck/src/: ast.rs  lib.rs  typecheck.rs
libs/utils/src/: lib.rs
std/: fowl.jsonc  io.fo
std/src/: io.fo
