[workspace]
members = [
  "fowl",
  "libs/*"
]
resolver = "3"

[workspace.dependencies]
anyhow = "1"
codegen = { path = "libs/codegen" }
error = { path = "libs/error" }
fowl_jsonc = { path = "libs/fowl_jsonc" }
lexer = { path = "libs/lexer" }
parser = { path = "libs/parser" }
span = { path = "libs/span" }
typecheck = { path = "libs/typecheck" }
utils = { path = "libs/utils" }
