[package]
name = "codegen"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
parser = { workspace = true }
cranelift = "0.125.4"
cranelift-codegen = "0.125.4"
cranelift-module = "0.125.4"
cranelift-object = "0.125.4"
target-lexicon = { version = "0.13.3", features = ["std"] }
